Add Stripe payments, Refactor some test to be Integration Tests instead of Unit tests, Added SQL optimisations, Added parallel testing configuration in the POM, README update, Fixed bug with cart view showing "Cart is empty", some optimisations